# DRG_modal

./: .gitignore  README.md  pyproject.toml
examples/: tap_test.py
src/DRG_modal/: modal.py  utils.py
