[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DRG_modal"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Max Champneys", email = "max.champneys@sheffield.ac.uk" }
]

# Dépendances du projet
dependencies = [
    "numpy",
    "nptdms",
    "matplotlib",
    "scipy",
    "tqdm",
    "einops",
    "seaborn"
]

[tool.setuptools.packages.find]
where = ["src"]